2007-05-03  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs
	(BuildRefactoryMenuForItem): Fixed logic for deciding if an item
	could be renamed.

	* MonoDevelop.Ide.Gui.Dialogs/RenameItemDialog.cs (OnOKClicked):
	Allow renaming of LocalVariables and IParameters.

2007-05-03  David Makovský (Yakeen) <yakeen@sannyas-on.net> 

	* MonoDevelop.Ide.Tasks/CommentTasksView.cs: Port menu to action based,
	  add go to and delete commands. Added customization of columns
	  visibility.
	* MonoDevelop.Ide.Tasks/TaskService.cs: use .Net 2.0 style Split for
	  safer behaviour

2007-05-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/Combine.cs,
	  MonoDevelop.Projects/CombineEntryEventArgs.cs,
	  MonoDevelop.Projects.Parser/DefaultParserService.cs: Added a
	  Reloading property to the argument of the entry add/remove events
	  of Combine, which is set to true if the entry is being only
	  reloaded, not actually removed/added to the combine.

2007-05-02  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/RenameItemDialog.cs: Connect to the
	"activated" signal on the GtkEntry box and make it "click" the OK
	button.

2007-05-01  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs (CodeRefactorer): Set
	the TextFileProfider for the refactoer to the
	OpenDocumentFileProvider.
	(OpenDocumentFileProvider): Copied here from another
	location... really need to consolidate the two.

	* MonoDevelop.Ide.Tasks/CommentTasksView.cs: Removed unused
	solutionLoaded variable.

	* MonoDevelop.Ide.Gui/Workbench.cs: Got rid of unused guiLock
	variable.

	* MonoDevelop.Ide.Gui.Dialogs/RenameItemDialog.cs: New dialog
	class for renaming an item (be it a class, interface, whatever).

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs (Rename):
	Implemented.

2007-04-27  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: can't destroy after
	dispose.  Just Destroy.
