@@ -1,3 +1,10 @@
+2007-05-03  David Makovský (Yakeen) <yakeen@sannyas-on.net> 
+
+	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Port menu to actions api,
+	  added Jump to command and customization of columns.
+	* MonoDevelop.Ide.Tasks/CommentTasksView.cs: Use SelectedTask
+	  everywhere.
+
 2007-05-03  Jeffrey Stedfast  <fejj@novell.com>
 
 	* MonoDevelop.Ide.Commands/RefactoryCommands.cs
